# rules_cpp

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md
.github/workflows/: ci.yaml  gcc.yaml  llvm.yaml
cpp/: BUILD.bazel  aspects.bzl  extension.bzl  providers.bzl  repositories.bzl  rules.bzl
cpp/private/: clang.BUILD  common.bzl  extra_actions.bzl  llvm.BUILD  refresh_compile_commands.py  target_rules.bzl  tool.bzl  toolchain.bzl  tools.BUILD  tools_rules.bzl  unix_toolchain_features.bzl  utils.bzl
cpp/private/actions/: compile.bzl  strip.bzl
cpp/private/llvm/: download.bzl  releases_aarch64_darwin.bzl  releases_x64_darwin.bzl  releases_x64_linux.bzl
cpp/private/toolchain/: clang_toolchain.bzl  config_impl.bzl  cpp_toolchain_config_rule.bzl  rules.bzl  unix_toolchain_features.bzl
cpp/tools/: BUILD.bazel  refresh_compile_commands.py  run_clang_format.py
cpp/tools/common/: alignment.hpp  files.hpp  headers.hpp  static_string.hpp
cpp/tools/headers_database/: main.cpp
cpp/tools/unused_headers/: main.cpp
docs/: features.md
examples/: BUILD.bazel  MODULE.bazel
integration_tests/: .gitignore
integration_tests/rules/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  test.sh
integration_tests/rules/module/: impl.cpp  interface.cppm  module_user.cpp
integration_tests/rules/src/: bar.cpp  foo.cpp  main.cpp
integration_tests/toolchains/: .bazelrc  BUILD.bazel  MODULE.bazel  test.sh  test_linux.sh  test_macos.sh
integration_tests/toolchains/lib2/: BUILD.bazel
integration_tests/toolchains/src/: foo.cpp  main.cpp
scripts/: configure_llvm.py  flatten_usr_dirs.sh
