load("@rules_cpp//cpp:rules.bzl", "cpp_toolchain")

cpp_toolchain(
  name = "clang-x64",
  compiler = "@clang//:clang",
  linker = "@clang//:lld",
  stdlib = "@clang//:libcpp",
  static_stdlib = "@clang//:static_libc++",
  binutils = "@clang//:binutils",
  target_cpus = [
    "k8",
    "aarch64",
    "darwin_arm64",
  ]
)

cc_binary(
  name = "hello_world",
  srcs = [
    "hello_world.cpp",
  ],
)