load(
    "@rules_cpp//cpp:rules.bzl",
    "clang_format",
    "cpp_binary",
    "cpp_module",
    "cpp_shared_library",
    "cpp_test",
)

cpp_module(
    name = "test",
    srcs = ["module/impl.cpp"],
    interface = "module/interface.cppm",
    module_name = "test",
)

cc_library(
    name = "bar",
    srcs = [
        "src/bar.cpp",
        "src/bar.h",
        "src/unused.h",
    ],
    hdrs = ["src/bar.h"],
    include_prefix = "bar",
    strip_include_prefix = "src",
)

cpp_shared_library(
    name = "foo",
    srcs = ["src/foo.cpp"],
    hdrs = ["src/foo.hpp"],
    include_prefix = "foo",
    strip_include_prefix = "src",
    deps = [":bar"],
)

cc_binary(
    name = "main",
    srcs = ["src/main.cpp"],
    deps = [":foo"],
)

cpp_binary(
    name = "module_user",
    srcs = ["module/module_user.cpp"],
    deps = [":test"],
)

cpp_test(
    name = "module_test",
    srcs = ["module/module_user.cpp"],
    deps = [":test"],
)

clang_format(
    name = "apply_clang_format",
    deps = [
        ":bar",
        ":foo",
        ":main",
    ],
)
